--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         button:hover {
             background-color: darkgreen;
         }
+        #responseMessage {
+            font-weight: bold;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
@@ -51,38 +55,50 @@
     <p id="responseMessage"></p>
 
     <script>
-        document.getElementById('dataForm').addEventListener('submit', function(event) {
+        document.getElementById('dataForm').addEventListener('submit', async function(event) {
             event.preventDefault();
 
-            const nationalID = document.getElementById('nationalID').value;
-            const dateAdded = document.getElementById('dateAdded').value;
+            const nationalID = document.getElementById('nationalID').value.trim();
+            const dateAdded = document.getElementById('dateAdded').value.trim();
+            const responseMessage = document.getElementById('responseMessage');
 
-            fetch("https://script.google.com/macros/s/AKfycbwitU3WAKES6jJrypNOP_Ebm_3ilJ5ApgU5-P4W1Ez3LkSh_-STHF0ouWtrp6TVAsTd/exec", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ nationalID, dateAdded })
-            })
-            .then(response => response.json())
-            .then(data => {
-                const msg = document.getElementById('responseMessage');
+            // Validate input
+            if (!nationalID || !dateAdded) {
+                responseMessage.style.color = 'red';
+                responseMessage.textContent = "Please fill in all fields.";
+                return;
+            }
+
+            responseMessage.style.color = 'blue';
+            responseMessage.textContent = "Submitting, please wait...";
+
+            try {
+                const response = await fetch("https://script.google.com/macros/s/AKfycbwitU3WAKES6jJrypNOP_Ebm_3ilJ5ApgU5-P4W1Ez3LkSh_-STHF0ouWtrp6TVAsTd/exec", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ nationalID, dateAdded })
+                });
+
+                const data = await response.json();
+                
                 if (data.success) {
-                    msg.style.color = 'green';
-                    msg.textContent = data.message;
+                    responseMessage.style.color = 'green';
+                    responseMessage.textContent = data.message;
                     document.getElementById('dataForm').reset();
                     
-                    // Redirect to Google Form after 2 seconds
+                    // Redirect after 2 seconds
                     setTimeout(() => {
                         window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLSfeKpAYRdNk_ii0A9035vN7wmaMjgUwFhlGaN83A4dXHyC1dA/viewform?usp=sf_link";
                     }, 2000);
                 } else {
-                    msg.style.color = 'red';
-                    msg.textContent = data.message;
+                    responseMessage.style.color = 'red';
+                    responseMessage.textContent = data.message;
                 }
-            })
-            .catch(error => {
-                document.getElementById('responseMessage').style.color = 'red';
-                document.getElementById('responseMessage').textContent = "Error: " + error.message;
-            });
+            } catch (error) {
+                responseMessage.style.color = 'red';
+                responseMessage.textContent = "Error: Failed to submit data. Please try again.";
+                console.error("Fetch error:", error);
+            }
         });
     </script>
 </body>
